# Formation

./: README.md  app.py  file_loading.py  pyproject.toml  spectrum.py  test_spectrum.py
docs/source/: conf.py  index.rst
